Fix double scroll bars

--- a/blender-today/application/static/sass/main.sass
+++ b/blender-today/application/static/sass/main.sass
@@ -1894,8 +1894,7 @@ fieldset
 
 .dialog
 	position: fixed // POS on mobile
-	overflow: scroll
-	overflow-x: hidden
+	overflow: hidden
 	display: -webkit-flex
 	display: flex
 	-webkit-align-items: center
